--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.24.0",
     "expo": "^43.0.0",
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
@@ -32,9 +33,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "babel-jest": "~25.2.6",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.11.0"
+    "react-test-renderer": "~16.11.0",
+    "typescript": "~4.3.5"
   },
   "jest": {
     "preset": "react-native"
